--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,7 @@ section {
 .sec2 {
   display: none;
   transform: translateY(0) scale(1);
-  background-color: aqua;
+  background-color: rgb(33, 32, 32);
 }
 
 .sec3 {
@@ -198,6 +198,62 @@ section {
 .header-content .right-header p {
   margin: 1.5rem 0;
   line-height: 2rem;
+}
+
+/*  About  */
+.about {
+  border: 4px solid goldenrod;
+}
+.about .about-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  padding-top: 3.5rem;
+  padding-bottom: 5rem;
+  border: 2px solid green;
+}
+.about .about-container .right-about {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 2rem;
+  border: 2px solid blueviolet;
+}
+.about .about-container .right-about .about-item {
+  border: 1px solid var(--gray5);
+  border-radius: 5px;
+  transition: all 0.4s ease-in-out;
+  box-shadow: 1px 2px 15px rgba(0, 0, 0, 0.2);
+}
+.about .about-container .right-about .about-item:hover {
+  cursor: default;
+  transform: translateY(-5px);
+  border: 1px solid var(--color-secondary);
+  box-shadow: 1px 4px 15px rgba(0, 0, 0, 0.32);
+}
+.about .about-container .right-about .about-item .about-text {
+  padding: 1.5rem;
+  display: flex;
+  flex-direction: column;
+}
+.about .about-container .right-about .about-item .about-text .large-txt {
+  font-size: 3rem;
+  font-weight: 700;
+  color: var(--color-secondary);
+}
+.about .about-container .right-about .about-item .about-text .small-txt {
+  padding-left: 3rem;
+  position: relative;
+  text-transform: uppercase;
+  font-size: 1.2rem;
+  letter-spacing: 2px;
+}
+.about .about-container .right-about .about-item .about-text .small-txt::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 15px;
+  width: 2rem;
+  height: 2px;
+  background-color: var(gray5);
 }
 
 /*  Independent Comnponent  */
