--- a/css/style.scss
+++ b/css/style.scss
@@ -72,7 +72,7 @@ section {
 .sec2 {
     display: none;
     transform: translateY(0) scale(1);
-    background-color: aqua;
+    background-color: rgb(33, 32, 32);
 }
 
 .sec3 {
@@ -214,6 +214,67 @@ section {
 }
 
 
+/*  About  */
+.about {
+border: 4px solid goldenrod;
+
+.about-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    padding-top: 3.5rem;
+    padding-bottom: 5rem;
+    border: 2px solid green;
+  
+
+    .right-about {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-gap: 2rem;
+        border: 2px solid blueviolet;
+
+        .about-item {
+            border: 1px solid var(--gray5);
+            border-radius: 5px;
+            transition: all .4s ease-in-out;
+            box-shadow: 1px 2px 15px rgba(0, 0, 0, .2);
+            &:hover {
+                cursor: default;
+                transform: translateY(-5px);
+                border: 1px solid var(--color-secondary);
+                box-shadow: 1px 4px 15px rgba(0, 0, 0, .32);
+            }
+
+            .about-text {
+                padding: 1.5rem;
+                display: flex;
+                flex-direction: column;
+                .large-txt {
+                    font-size: 3rem;
+                    font-weight: 700;
+                    color: var(--color-secondary);
+                }
+                .small-txt {
+                    padding-left: 3rem;
+                    position: relative;
+                    text-transform: uppercase;
+                    font-size: 1.2rem;
+                    letter-spacing: 2px;
+                    &::before {
+                        content: '';
+                        position: absolute;
+                        left: 0;
+                        top: 15px;
+                        width: 2rem;
+                        height: 2px;
+                        background-color: var(gray5);
+                    }
+                }
+            }
+        }
+    }
+}
+}
+
 /*  Independent Comnponent  */
 .btn-container {
     display: flex;
@@ -266,7 +327,7 @@ section {
 
 .main-title {
     text-align: center;
-
+    
     h2 {
         position: relative;
         text-transform: uppercase;
