--- a/css/style.scss
+++ b/css/style.scss
@@ -19,6 +19,13 @@
     --gray6: #12181b;
     --br-sm-: 14px;
     --box-shadow-1: 0 3px 15px rgba(0,0,0,.2);
+
+    --color-css: rgb(64, 143, 208);
+    --color-html: rgb(203, 125, 8);
+    --color-js: rgb(215, 175, 54);
+    --color-ts: rgb(114, 168, 212);
+    --color-react: rgb(48, 111, 163);
+    --color-next: lightgray;
 }
 
 
@@ -55,7 +62,7 @@ section {
     position: absolute;
     top: 0;
     left: 0;
-    padding: 3rem 18rem;
+    padding: 3rem 8rem;
 }
 
 .section {
@@ -216,63 +223,148 @@ section {
 
 /*  About  */
 .about {
-border: 4px solid goldenrod;
 
-.about-container {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    padding-top: 3.5rem;
-    padding-bottom: 5rem;
-    border: 2px solid green;
-  
 
-    .right-about {
+    .about-container {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
-        grid-gap: 2rem;
-        border: 2px solid blueviolet;
+        padding-top: 3.5rem;
+        padding-bottom: 5rem;    
 
-        .about-item {
-            border: 1px solid var(--gray5);
-            border-radius: 5px;
-            transition: all .4s ease-in-out;
-            box-shadow: 1px 2px 15px rgba(0, 0, 0, .2);
-            &:hover {
-                cursor: default;
-                transform: translateY(-5px);
-                border: 1px solid var(--color-secondary);
-                box-shadow: 1px 4px 15px rgba(0, 0, 0, .32);
+        .right-about {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            grid-gap: 2rem;
+          
+
+            .about-item {
+                border: 1px solid var(--gray5);
+                border-radius: 5px;
+                transition: all .4s ease-in-out;
+                box-shadow: 1px 2px 15px rgba(0, 0, 0, .2);
+                &:hover {
+                    cursor: default;
+                    transform: translateY(-5px);
+                    border: 1px solid var(--color-secondary);
+                    box-shadow: 1px 4px 15px rgba(0, 0, 0, .32);
+                }
+
+                .about-text {
+                    padding: 1.5rem;
+                    display: flex;
+                    flex-direction: column;
+                    .large-txt {
+                        font-size: 3rem;
+                        font-weight: 700;
+                        color: var(--color-secondary);
+                    }
+                    .small-txt {
+                        padding-left: 3rem;
+                        position: relative;
+                        text-transform: uppercase;
+                        font-size: 1.2rem;
+                        letter-spacing: 2px;
+                        &::before {
+                            content: '';
+                            position: absolute;
+                            left: 0;
+                            top: 15px;
+                            width: 2rem;
+                            height: 2px;
+                            background-color: var(gray5);
+                        }
+                    }
+                }
             }
+        }
 
-            .about-text {
-                padding: 1.5rem;
+        .left-about {
+            padding-right: 5rem;
+          
+            p {
+                line-height: 2rem;
+                padding: 1rem;
+                color: var(--gray1);
+            }
+            h4 {
+                font-size: 2rem;
+                text-transform: uppercase;
+            }
+        }
+    }
+
+    .about-stats {
+        padding: 4rem;
+
+        .stat-title {
+            margin: 1rem 0;
+            font-size: 2rem;
+        }
+
+        .progress-bars {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            grid-gap: 2rem;
+
+            .progress-bar {
                 display: flex;
                 flex-direction: column;
-                .large-txt {
-                    font-size: 3rem;
-                    font-weight: 700;
-                    color: var(--color-secondary);
-                }
-                .small-txt {
-                    padding-left: 3rem;
-                    position: relative;
+
+                .prog-title {
                     text-transform: uppercase;
-                    font-size: 1.2rem;
-                    letter-spacing: 2px;
-                    &::before {
-                        content: '';
-                        position: absolute;
-                        left: 0;
-                        top: 15px;
-                        width: 2rem;
-                        height: 2px;
-                        background-color: var(gray5);
+                    font-weight: 500;
+                }
+                .progress-con {
+                    display: flex;
+                    align-items: center;
+                    .prog-text {
+                        color: var(--gray2);
+                    }
+                    .progress {
+                        width: 100%;
+                        height: .45rem;
+                        background-color: var(--gray4);
+                        margin-left: 1rem;
+                        position: relative;
+                        span {
+                            position: absolute;
+                            top: 0;
+                            left: 0;
+                            height: 100%;
+                            
+                            transition: all .4s ease-in-out;
+                            
+                        }
+                        .html {
+                            width: 80%;
+                            background-color: var(--color-html);
+                        }
+                        .css {
+                            width: 75%;
+                            background-color: var(--color-css);
+                        }
+                        .js {
+                            width: 60%;
+                            background-color: var(--color-js);
+                        }
+                        .ts {
+                            width: 30%;
+                            background-color: var(--color-ts);
+                        }
+                        .react {
+                            width: 45%;
+                            background-color: var(--color-react);
+                        }
+                        .next {
+                            width: 15%;
+                            background-color: var(--color-next);
+                        }
                     }
                 }
             }
         }
     }
-}
+
 }
 
 /*  Independent Comnponent  */
