--- a/css/style.scss
+++ b/css/style.scss
@@ -365,7 +365,147 @@ section {
         }
     }
 
+    /*  Time Line  */
+    .timeline {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-gap: 2rem;
+        padding-bottom: 3rem;
+
+        .timeline-item {
+            position: relative;
+            padding-left: 3rem;
+            border-left: 1px solid var(--gray5);
+
+            .tl-icon {
+                position: absolute;
+                left: -27px;
+                top: 0;
+                width: 50px;
+                height: 50px;
+                border-radius: 50%;
+                background-color: var(--color-secondary);
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                i {
+                    font-size: 1.3rem;
+                }
+            }
+            .tl-duration {
+                padding: .2rem .6rem;
+                background-color: var(--gray5);
+                border-radius: 15px;
+                display: inline-block;
+                font-size: .8rem;
+                text-transform: uppercase;
+                font-weight: 500;
+            }
+            h5 {
+                padding: 1rem 0;
+                text-transform: uppercase;
+                font-size: 1.3rem;
+                font-weight: 600;
+
+                span {
+                    color: var(--gray2);
+                    font-size: 1.2rem;
+                    font-weight: 500;
+                }
+            }
+            p {
+                color: var(--gray2);
+            }
+        }
+    }
+
 }
+
+/* Portfolio  */
+
+.port-text {
+    padding: 2rem 0;
+    text-align: center;
+}
+
+.portfolios {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 2rem;
+    margin-top: 3rem;
+
+    .portfolio-item {
+        position: relative;
+        border-radius: 15px;
+        .image {
+
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                border-radius: 15px;
+            }
+        }
+        .hover-items {
+         width: 100%;
+         height: 100%;
+         background-color: var(--color-secondary);
+         position: absolute;
+         left: 0;
+         top: 0;
+         border-radius: 15px;
+         display: flex;
+         align-items: center;
+         justify-content: center;
+         flex-direction: column;
+         opacity: 0;
+         transform: scale(0);
+         transition: all .5s ease-in-out;
+         h3 {
+            font-size: 1.5rem;
+            color: var(--white);
+            margin-bottom: 1.5rem;
+         }
+         .icons {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            .icon {
+                background-color: var(--color-primary);
+                border-radius: 50%;
+                width: 50px;
+                height: 50px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                margin: 0 1rem;
+                cursor: pointer;
+                transition: all .5s ease-in-out;
+                i {
+                    font-size: 1.5rem;
+                    color: var(--white);
+                    margin: 0 1rem;
+                }
+                &:hover {
+                    background-color: var(--white);
+                    i {
+                        color: var(--color-primary);
+                    }
+                }
+            }
+         }
+        }
+    }
+}
+
+.portfolio-item:hover .hover-items {
+    opacity: 1;
+    transform: scale(1);
+}
+
+
+
 
 /*  Independent Comnponent  */
 .btn-container {
