--- a/css/style.css
+++ b/css/style.css
@@ -82,19 +82,16 @@ section {
 .sec3 {
   display: none;
   transform: translateY(0) scale(1);
-  background-color: purple;
 }
 
 .sec4 {
   display: none;
   transform: translateY(0) scale(1);
-  background-color: blue;
 }
 
 .sec5 {
   display: none;
   transform: translateY(0) scale(1);
-  background-color: burlywood;
 }
 
 .active {
@@ -336,6 +333,22 @@ section {
   width: 15%;
   background-color: var(--color-next);
 }
+.about .stat-title {
+  text-transform: uppercase;
+  font-size: 1.4rem;
+  text-align: center;
+  padding: 3.5rem 0;
+  position: relative;
+}
+.about .stat-title::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  width: 60%;
+  height: 1px;
+  background-color: var(--gray5);
+  transform: translateX(-50%);
+}
 .about .timeline {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -390,6 +403,7 @@ section {
 .port-text {
   padding: 2rem 0;
   text-align: center;
+  font-size: 2rem;
 }
 
 .portfolios {
@@ -462,6 +476,94 @@ section {
 .portfolio-item:hover .hover-items {
   opacity: 1;
   transform: scale(1);
+}
+
+/* Blogs Section   */
+.blogs {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 2rem;
+  margin-top: 3rem;
+}
+.blogs .blog {
+  position: relative;
+  background-color: var(--gray5);
+  border-radius: 5px;
+  box-shadow: 1px 1px 20px rgba(0, 0, 0, 0.2);
+  transition: all 0.4s ease-in-out;
+}
+.blogs .blog:hover {
+  box-shadow: 1px 1px 20px rgba(0, 0, 0, 0.5);
+  transform: translateY(-5px);
+}
+.blogs .blog:hover img {
+  filter: grayscale(0);
+  transform: scale(1.1);
+  box-shadow: 1px 1px 20px rgba(0, 0, 0, 0.8);
+}
+.blogs .blog img {
+  width: 100%;
+  height: 300px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.blogs .blog .blog-text {
+  margin-top: -7px;
+  padding: 1.1rem;
+  border-top: 8px solid var(--color-secondary);
+}
+.blogs .blog .blog-text h4 {
+  font-size: 1.5rem;
+  margin-bottom: 0.7rem;
+  transition: all 0.4s ease-in-out;
+  cursor: pointer;
+}
+.blogs .blog .blog-text h4:hover {
+  color: var(--color-secondary);
+}
+.blogs .blog .blog-text p {
+  color: var(--gray2);
+  line-height: 2rem;
+  padding-bottom: 2rem;
+}
+
+/* Contact Section   */
+.contact-content {
+  display: flex;
+  padding: 3.5rem;
+}
+.contact-content .left-contact {
+  flex: 2;
+}
+.contact-content .right-contact {
+  flex: 3;
+  margin-left: 3rem;
+}
+.contact-content .right-contact .input-control {
+  margin: 1.5rem 0;
+}
+.contact-content .right-contact .input-control input, .contact-content .right-contact .input-control textarea {
+  border-radius: 30px;
+  font-weight: inherit;
+  font-size: inherit;
+  font-family: inherit;
+  padding: 0.8rem 1.1rem;
+  outline: none;
+  border: none;
+  background-color: var(--gray5);
+  width: 100%;
+  color: var(--white);
+  resize: none;
+}
+.contact-content .right-contact .i-c-2 {
+  display: flex;
+}
+.contact-content .right-contact .i-c-2 :last-child {
+  margin-left: 1.5rem;
+}
+.contact-content .right-contact .submit-btn {
+  display: flex;
+  justify-content: flex-start;
 }
 
 /*  Independent Comnponent  */
