--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,20 @@
   --color-next: lightgray;
 }
 
+.light-mode {
+  --color-primary: #191d2b;
+  --color-secondary: #27AE60;
+  --white: #eee;
+  --black: #111;
+  --gray0: #f8f8f8;
+  --gray1: #dbe1e8;
+  --gray2: #b2becd;
+  --gray3: #6c7983;
+  --gray4: #454e56;
+  --gray5: #2a2e35;
+  --gray6: #12181b;
+}
+
 body {
   background-color: var(--color-primary);
   font-size: 1.1rem;
@@ -123,8 +137,8 @@ section {
   padding: 1rem;
   cursor: pointer;
   background-color: var(--gray4);
-  width: 60px;
-  height: 60px;
+  width: 45px;
+  height: 45px;
   border-radius: 50%;
   display: flex;
   align-items: center;
@@ -143,6 +157,26 @@ section {
 }
 .controlls .active-btn i {
   color: var(--white);
+}
+
+.theme-btn {
+  z-index: 10;
+  top: 5%;
+  right: 3%;
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  background-color: var(--gray4);
+  cursor: pointer;
+  position: fixed;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0 3px 15px rgba(0, 0, 0, 0.3);
+  transition: all 0.3s ease-in-out;
+}
+.theme-btn:active {
+  transform: translateY(-8px);
 }
 
 .header-content {
@@ -534,6 +568,53 @@ section {
 }
 .contact-content .left-contact {
   flex: 2;
+}
+.contact-content .left-contact h4 {
+  margin-top: 1rem;
+  font-size: 2rem;
+  text-transform: uppercase;
+}
+.contact-content .left-contact p {
+  margin: 1rem 0;
+  line-height: 2rem;
+}
+.contact-content .left-contact .contact-info .contact-item {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.contact-content .left-contact .contact-info .contact-item p {
+  margin: 0.3rem 0 !important;
+  padding: 0 !important;
+}
+.contact-content .left-contact .contact-icon {
+  display: flex;
+  margin-top: 2rem;
+}
+.contact-content .left-contact .contact-icon a {
+  display: flex;
+  align-items: center;
+  color: var(--white);
+  background-color: var(--gray5);
+  cursor: pointer;
+  justify-content: center;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  margin: 0 0.4rem;
+  transition: all 0.4s ease-in-out;
+}
+.contact-content .left-contact .contact-icon a:hover {
+  background-color: var(--color-secondary);
+}
+.contact-content .left-contact .contact-icon a:hover i {
+  color: var(--color-primary);
+}
+.contact-content .left-contact .contact-icon a i {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.3rem;
 }
 .contact-content .right-contact {
   flex: 3;
