starting config the responsive layout

--- a/css/style.css
+++ b/css/style.css
@@ -28,10 +28,10 @@
 }
 
 .light-mode {
-  --color-primary: #191d2b;
-  --color-secondary: #27AE60;
-  --white: #eee;
-  --black: #111;
+  --color-primary: #ffffff;
+  --color-secondary: purple;
+  --white: #454e56;
+  --black: #fff;
   --gray0: #f8f8f8;
   --gray1: #dbe1e8;
   --gray2: #b2becd;
@@ -62,7 +62,7 @@ a {
 }
 
 header {
-  height: 100vh;
+  min-height: 100vh;
   color: var(white);
   overflow: hidden;
 }
@@ -715,4 +715,67 @@ section {
   transform: translate(-50%, -50%);
   font-weight: 800;
   font-size: 6.3rem;
+}
+
+@media screen and (max-width: 600px) {
+  header {
+    padding: 0;
+  }
+  header .right-header {
+    padding: 2rem !important;
+  }
+  .theme-btn {
+    width: 50px;
+    height: 50px;
+  }
+  .header-content {
+    grid-template-columns: 1fr;
+    padding-bottom: 6rem;
+  }
+  .left-header .h-shape {
+    display: none;
+  }
+  .right-heaer {
+    grid-row: 1;
+    width: 90%;
+    margin: 0 auto;
+  }
+  .right-heaer .name {
+    font-size: 2.5rem !important;
+  }
+  .header-content .left-header .image {
+    margin: 0 auto;
+    width: 90%;
+  }
+  .about-container {
+    grid-template-columns: 1fr;
+  }
+  .about-container .right-about {
+    grid-template-columns: 1fr;
+    padding-top: 2.5rem;
+  }
+  .about-container .left-about {
+    padding-right: 0;
+  }
+  .about-container .left-about p {
+    padding-left: 0;
+  }
+  .timeline {
+    grid-template-columns: 1fr;
+    padding-bottom: 6rem;
+  }
+  .controlls {
+    top: auto;
+    bottom: 0;
+    flex-direction: row;
+    justify-content: center;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 100%;
+    background-color: var(--gray5);
+    gap: 1rem;
+  }
+  .controlls .control {
+    margin: 1rem 0.3rem;
+  }
 }/*# sourceMappingURL=style.css.map */
